--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>olá, git!</h1><p>este é o meu primeiro arquivo versionado.</p>
+<h1>olá, git!</h1>
+<p>este é o meu primeiro arquivo versionado.</p>
+<p>Este é um novo parágrafo adicionado!</p> </body>
+</html>
+
