testando erro de commit e corrigindo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1>olá, git!</h1>
 <p>este é o meu primeiro arquivo versionado.</p>
-<p>Este é um novo parágrafo adicionado!</p> </body>
+<p>Este é um novo parágrafo adicionado!</p> 
+<p>eu conseguir sozinho</p>
+</body>
 </html>
 
