--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <p>este é o meu primeiro arquivo versionado.</p>
 <p>Este é um novo parágrafo adicionado!</p> 
 <p>eu conseguir sozinho</p>
+<p>eu consequi mais uma vez sozinho</p>
 </body>
 </html>
 
