--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <p>Este é um novo parágrafo adicionado!</p> 
 <p>eu conseguir sozinho</p>
 <p>eu consequi mais uma vez sozinho</p>
+<p>teste 2</p>
 </body>
 </html>
 
